# SQLame

./: .gitignore  README.md  TODO  buildAll.sh  cleanAll.sh  idea.drawio  test.py
communication/: CMakeLists.txt  build.sh  clean.sh
communication/src/: CMakeLists.txt  authentication.cpp  authentication.hpp  communication.cpp  communication_requests_handler.hpp  communication_server.cpp  communication_server.hpp  helper.cpp  https_server.cpp  https_server.hpp
communication/tests/: CMakeLists.txt  test_communication.cpp
compression_encryption/: CMakeLists.txt  README.md  build.sh
compression_encryption/src/: CMakeLists.txt  compression_encryption.cpp  helper.cpp
compression_encryption/tests/: CMakeLists.txt  test_compression_encryption.cpp
config/: configuration.json  directories.json  users.json
core/: CMakeLists.txt  README.md  build.sh  main.cpp
core/src/: CMakeLists.txt  authentication.cpp  authentication.hpp  configuration.cpp  configuration.hpp  core.cpp  core.hpp  core_requests_handler.cpp  core_requests_handler.hpp  database_definitions.cpp  database_definitions.hpp  directory_management.cpp  directory_management.hpp  helper.cpp  language_syntax.cpp  language_syntax.hpp  log.hpp  logger.cpp  logger.hpp  metadata_handler.cpp  metadata_handler.hpp  operation_generator.cpp  operation_generator.hpp  tokenizer.cpp  tokenizer.hpp  utilities.cpp  utilities.hpp
core/tests/: CMakeLists.txt  test_core.cpp
documentation/: mkdocs.yml
documentation/docs/: index.md
management/: CMakeLists.txt  build.sh
management/src/: CMakeLists.txt  helper.cpp  management.cpp
management/tests/: CMakeLists.txt  test_management.cpp
test/: request.json
transaction/: CMakeLists.txt  README.md  build.sh
transaction/src/: CMakeLists.txt  helper.cpp  transaction.cpp
transaction/tests/: CMakeLists.txt  test_transaction.cpp
website/: README.md  package-lock.json  package.json
website/src/: App.vue
website/src/components/: SidebarComponent.vue
website/src/router/: index.ts
website/src/views/: AboutView.vue  ConfigurationView.vue  DataView.vue  LoginView.vue  LogsView.vue  QuerryView.vue  UsersView.vue
